--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ bip0039 = "0.12"
 rand = "0.8"
 rand_core = "0.6"
 zip32 = "0.2"
+blake3 = "1.5"
 
 # Storage
 rusqlite = { version = "0.37", features = ["bundled"] }
