Add configurable logging with verbose debug instrumentation

--- a/crates/zots-zcash/Cargo.toml
+++ b/crates/zots-zcash/Cargo.toml
@@ -30,6 +30,7 @@ rand.workspace = true
 rand_core.workspace = true
 zip32.workspace = true
 sha2.workspace = true
+tracing.workspace = true
 
 # Storage
 rusqlite.workspace = true
