--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,3 +74,5 @@ indicatif = "0.17"
 # Misc
 dirs = "5.0"
 nonempty = "0.11"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
