--- a/crates/zots-cli/Cargo.toml
+++ b/crates/zots-cli/Cargo.toml
@@ -24,6 +24,8 @@ crossterm.workspace = true
 # Output
 colored.workspace = true
 indicatif.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
 
 # Async
 tokio.workspace = true
