--- a/crates/zots-core/Cargo.toml
+++ b/crates/zots-core/Cargo.toml
@@ -3,6 +3,13 @@ name = "zots-core"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
+authors.workspace = true
+keywords.workspace = true
+categories.workspace = true
+publish = false
 description = "Core library for zOpenTimestamps - hashing, proof format, verification"
 
 [dependencies]
