Update explorer URLs and add configurable options
- Change default Zcash explorer to blockexplorer.one
- Add iris.to as default Nostr note viewer with link in publish output
- Add ZOTS_ZCASH_EXPLORER env var for custom Zcash explorer
- Add ZOTS_NOSTR_NOTE_URL env var for custom Nostr note viewer
- Update .env.example with new optional configuration

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,15 @@ ZOTS_NOSTR_NSEC="nsec1..."
 
 # Required for Nostr: Comma-separated list of relay URLs
 ZOTS_NOSTR_RELAYS="wss://relay.damus.io,wss://nos.lol,wss://relay.nostr.band,wss://bitstack.app,wss://relay.primal.net,wss://purplepag.es"
+
+# Optional: Custom Nostr note viewer URL (default: https://iris.to)
+# ZOTS_NOSTR_NOTE_URL="https://iris.to"
+
+# ─────────────────────────────────────────────────────────────────────────────
+# Explorer URLs (optional customization)
+# ─────────────────────────────────────────────────────────────────────────────
+
+# Optional: Custom Zcash block explorer base URL
+# Default for mainnet: https://blockexplorer.one/zcash/mainnet
+# Default for testnet: https://blockexplorer.one/zcash/testnet
+# ZOTS_ZCASH_EXPLORER="https://blockexplorer.one/zcash/testnet"
