Add webapp with WASM bindings
- Create zots-wasm crate with wasm-bindgen for browser support
- Build modern webapp using Vite, TypeScript, and TailwindCSS
- Implement file hashing with SHA-256 and BLAKE3 algorithms
- Add proof encoding/decoding with compact format support
- Implement QR code generation and camera scanning
- Add settings view with security disclaimers
- Include responsive design with dark theme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/zots-core",
     "crates/zots-zcash",
     "crates/zots-cli",
+    "crates/zots-wasm",
 ]
 
 [workspace.package]
