Add Ikki - modern Zcash desktop wallet
Ikki is a consumer-grade Zcash wallet with world-class UX:
- Modern design system with light theme and Revolut-inspired UI
- Account card with balance display in banking card style
- Send/Receive flows with multi-step transaction preview
- Transaction history with status indicators
- Settings with network and sync management
- Full onboarding flow for new/existing wallets

Also adds send_to_address method to zots-zcash wallet.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "crates/zots-zcash",
     "crates/zots-cli",
     "crates/zots-desktop",
+    "crates/ikki",
 ]
 
 [workspace.package]
